src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --ring: 215 20.2% 65.1%;

    --radius: 0.5rem;

    --f-body: "League Spartan", sans-serif;
    --btn-gradient-hovered: linear-gradient(
      90deg,
      #4b0082 29.88%,
      #ffc857 168.84%
    );
    --btn-gradient-default: linear-gradient(
      90deg,
      #4b0082 29.88%,
      #ffc857 281.71%
    );
    --btn-gradient-pressed: linear-gradient(
      90deg,
      #4b0082 29.88%,
      #ffc857 633.33%
    );
    --background-gradient-one: linear-gradient(
      180deg,
      #64497d 0%,
      #ffc857 100%
    );
    --background-gradient-two: linear-gradient(
      180deg,
      #64497d 0%,
      rgba(255, 200, 87, 0.43) 100%
    );
    --background-gradient-three: linear-gradient(
      180deg,
      #dfd2eb -37.18%,
      rgba(255, 255, 255, 0.994792) -37.17%,
      #9881ae 100%
    );
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 85.7% 97.3%;

    --ring: 217.2 32.6% 17.5%;
  }
}

html,
body {
  font-family: var(--f-body);
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  overflow-y: auto;
  min-height: 100vh;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

@media (prefers-color-scheme: dark) {
  /* :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  } */
}

/* body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
} */

/* typograpghy */
.font-display__large {
  font-family: var(--f-body);
  @apply font-normal;
  font-size: 57px;
  line-height: 64px;
}

.font-display__medium {
  font-family: var(--f-body);
  font-size: 45px;
  line-height: 52px;
}

.font-display__small {
  font-family: var(--f-body);
  @apply font-normal;
  font-size: 36px;
  line-height: 44px;
}

.font-headline__large {
  font-family: var(--f-body);

  font-size: 32px;
  line-height: 40px;
  font-weight: 600;
}

.font-headline__medium {
  font-family: var(--f-body);
  @apply font-normal;
  font-size: 28px;
  line-height: 36px;
}

.font-headline__small {
  font-family: var(--f-body);
  @apply font-normal;
  font-size: 24px;
  line-height: 32px;
}

.font-body__large {
  font-family: var(--f-body);
  @apply font-normal;
  font-size: 16px;
  line-height: 24px;
}

.font-body__medium {
  font-family: var(--f-body);
  @apply font-normal;
  font-size: 14px;
  line-height: 20px;
}

.font-body__small {
  font-family: var(--f-body);
  @apply font-normal;
  font-size: 12px;
  line-height: 16px;
}

.font-label__large {
  font-family: var(--f-body);
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
}
.font-label__medium {
  font-family: var(--f-body);
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
}

.font-label__small {
  font-family: var(--f-body);

  font-weight: 500;
  font-size: 11px;
  line-height: 16px;
}

.font-title__large {
  font-family: var(--f-body);
  font-weight: 400;
  font-size: 22px;
  line-height: 28px;
}
.font-title__medium {
  font-family: var(--f-body);
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
}

.font-title__small {
  font-family: var(--f-body);
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.elevation__light-1 {
  background: #d9d9d9;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),
    0px 1px 3px 1px rgba(0, 0, 0, 0.15);
}

.elevation__light-2 {
  background: #d9d9d9;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),
    0px 2px 6px 2px rgba(0, 0, 0, 0.15);
}

.elevation__light-3 {
  background: #d9d9d9;
  box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15),
    0px 1px 3px rgba(0, 0, 0, 0.3);
}

.elevation__light-4 {
  background: #d9d9d9;
  box-shadow: 0px 6px 10px 4px rgba(0, 0, 0, 0.15),
    0px 2px 3px rgba(0, 0, 0, 0.3);
}

.elevation__light-5 {
  background: #d9d9d9;
  box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.15),
    0px 4px 4px rgba(0, 0, 0, 0.3);
}

.btn-gradient-hovered {
  background: var(--btn-gradient-hovered);
}

.btn-gradient-default {
  background: var(--btn-gradient-default);
}

.btn-gradient-pressed {
  background: var(--btn-gradient-pressed);
}

.bg-gradient-one {
  background: var(--background-gradient-one);
}

.bg-gradient-two {
  background: var(--background-gradient-two);
}

.bg-gradient-three {
  background: var(--background-gradient-three);
}

.bug {
  @apply border-red-500  border-[2px];
}

/* input fiels styling */
.input_field {
  @apply flex flex-col gap-4;
}

.input_field-input {
  @apply w-full h-full    font-body__large text-neutral-90 placeholder:text-neutral-50  bg-transparent pb-2 border-none outline-none;
  border-bottom: solid 1px #4b0082 !important;
}

.otp_field-input {
  @apply font-body__large w-[50px] h-[50px] text-center border-none border-b-[2px] border-b-purple bg-transparent text-purple font-body__large font-medium  mr-[10px];
  border-bottom: solid 3px #4b0082 !important;
}

.otp_field-input_error {
  @apply font-body__large w-[50px] h-[50px] text-center bg-transparent text-purple   mr-[10px];
  border-bottom: solid 3px #b3261e !important;
  color: #f38983;
}

.input_field-input_error {
  @apply bg-transparent pb-2 border-none outline-none placeholder:text-[#f38983];
  border-bottom: solid 1px #b3261e !important;
  color: #f38983;
}

.password_field-input {
  position: absolute !important;
  top: 0px !important ;
  right: 20px !important  ;
  translate: transform(-50%, -50%) !important;
  height: 1.5rem;
  width: 1.5rem;
}

.error-message {
  @apply text-error text-sm;
}

/* btn */
.authBtn {
  @apply py-4 font-body__large  text-center btn-gradient-default text-grey shadow-auth-btn rounded-lg;
}

.authBtn:hover {
  @apply btn-gradient-hovered transition ease-in-out duration-500;
}

/* clears the ‘X’ from Internet Explorer */
input[type="search"]::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}
input[type="search"]::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}
/* clears the ‘X’ from Chrome */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

/* background clip text */
.gradient-text {
  background: linear-gradient(90deg, #4b0082 29.88%, #ffc857 281.71%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
}
.gradient-text__gold {
  background: linear-gradient(90deg, #4b0082 29.88%, #ffc857 168.84%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
}

